News articles table

--- a/src/css/default.styl
+++ b/src/css/default.styl
@@ -127,3 +127,15 @@ div#footer-content table td {
 #search-result-modal .modal-dialog {
   width: 80%;
 }
+
+.nowrap {
+  white-space: nowrap;
+}
+
+.news-table td {
+  border: 1px solid black;
+}
+
+.news-table th {
+  text-align: unset;
+}
