Move transcript below videos

--- a/src/partials/video.hbs
+++ b/src/partials/video.hbs
@@ -1,10 +1,7 @@
 ---
 name: videos
 ---
-<div style="display: flex;">
-  <video controls><source src="{{url}}" type="video/mp4"></video>
-  <iframe src="{{transcript}}"></iframe>
-</div>
-<br />
+<div style="text-align: center;"><video controls><source src="{{url}}" type="video/mp4"></video></div>
+<div><iframe src="{{transcript}}" style="width: 100%;"></iframe></div>
 <a target="_blank" href="{{transcript}}">Click here for transcript</a><br />
 <a href="javascript:history.go(-1);">Click here to go back</a>
