Increase height of transcript

--- a/src/partials/video.hbs
+++ b/src/partials/video.hbs
@@ -2,6 +2,6 @@
 name: videos
 ---
 <div style="text-align: center;"><video controls><source src="{{url}}" type="video/mp4"></video></div>
-<div><iframe src="{{transcript}}" style="width: 100%;"></iframe></div>
+<div><iframe src="{{transcript}}" style="width: 100%; height: 480px;"></iframe></div>
 <a target="_blank" href="{{transcript}}">Click here for transcript</a><br />
 <a href="javascript:history.go(-1);">Click here to go back</a>
