Add filler and styling to transcript

--- a/src/views/videos/Keating - Part I.hbs
+++ b/src/views/videos/Keating - Part I.hbs
@@ -1,7 +1,17 @@
 ---
 name: actors
 ---
-<video controls><source src="/files/videos/cut/program.8571.MP4-M20.194.116.mp4" type="video/mp4"></video>
+<div style="display: flex;">
+  <video controls><source src="/files/videos/cut/program.8571.MP4-M20.194.116.mp4" type="video/mp4"></video>
+  <div class="text-transcript">
+    <h4>Insert transcript here</h4>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus dapibus metus eu magna condimentum ornare. Vivamus iaculis nibh in magna venenatis eleifend. In at tincidunt justo. Aenean consequat vitae erat quis posuere. Quisque felis nisl, consequat eget est at, iaculis euismod nisi. Integer sit amet ex quam. Nullam euismod, tellus a bibendum scelerisque, felis ipsum aliquam quam, vitae pulvinar mauris diam sed diam. In rutrum leo nec lorem egestas, eu interdum leo fermentum.</p>
+    <p>Phasellus volutpat mollis lacinia. Morbi sollicitudin consequat mattis. Curabitur eu condimentum justo. Ut rutrum vel metus sed dapibus. Mauris eu dui nisl. Duis lorem felis, porta ut nibh vitae, venenatis eleifend nisi. Vivamus malesuada aliquet nulla sit amet dictum. Morbi fermentum ornare imperdiet. Proin non odio sed urna rutrum egestas at quis sem. Sed vestibulum eleifend enim, at interdum nisi hendrerit vitae.</p>
+    <p>Suspendisse ac gravida nibh. Morbi ut pretium ex. Curabitur viverra, erat non feugiat aliquet, ante nunc ultrices nunc, at elementum mauris turpis ut metus. Nam convallis eu dui suscipit dapibus. Suspendisse ultricies hendrerit fringilla. Ut sed nunc eget lectus ornare luctus eget id elit. Aenean fringilla nunc vitae orci eleifend lacinia sit amet id erat.</p>
+    <p>Vivamus nunc nisi, commodo in sagittis ac, condimentum pulvinar nisl. Morbi auctor arcu a elit accumsan, sit amet aliquet elit suscipit. Aliquam consequat mauris nec magna sagittis, sit amet lobortis elit tincidunt. Etiam consequat mauris eget neque ultrices, sit amet vestibulum velit vehicula. Phasellus faucibus, felis id laoreet ultrices, massa mauris tincidunt diam, fringilla molestie arcu sapien id arcu. Donec id pellentesque ligula. Sed rhoncus finibus eros ut ullamcorper. Proin ut massa mollis, aliquet sem sit amet, mollis erat.</p>
+    <p>Vivamus consequat dolor ut turpis sagittis efficitur. Fusce congue fermentum faucibus. Morbi quis magna eu turpis aliquam suscipit nec non lectus. Morbi enim neque, facilisis et convallis quis, tempus non neque. Sed sit amet orci quis mi dapibus congue. In vel mi vitae enim tincidunt eleifend. Quisque nec feugiat sapien, et pretium lectus. Suspendisse ultricies vel felis eget rutrum. Proin vitae viverra odio, quis tincidunt velit. Pellentesque viverra, tortor vitae tincidunt cursus, orci ipsum dignissim nibh, at tincidunt lacus risus non felis.</p>
+  </div>
+</div>
 <br />
 <u>No transcript available for this clip</u><br />
 <a href="javascript:history.go(-1);">Click here to go back</a>
