--- a/src/css/default.styl
+++ b/src/css/default.styl
@@ -139,3 +139,10 @@ div#footer-content table td {
 .news-table th {
   text-align: unset;
 }
+
+.text-transcript {
+  height: 480px;
+  margin: 10px;
+  padding: 5px;
+  overflow-y: auto;
+}
