2018 video and link updates
batch #3

--- a/src/views/actors/affiliates/James-Grogan.hbs
+++ b/src/views/actors/affiliates/James-Grogan.hbs
@@ -17,7 +17,7 @@ name: actors
     </div>
 
 <img src="/img/actors/Grogan.png" alt="James Grogan" class="float-left">
-<u>ACC Chief Counsel</u>
+<p><u>ACC Chief Counsel</u></p>
 
 <p>James “Jim” Grogan was ACC’s chief counsel and <a href="/actors/affiliates/Charles-Keating">Keating’s</a> “right-hand policy man.” Grogan did a significant amount of Keating’s behind-the-scenes work in lobbying various politicians to support different bills that were beneficial to ACC and Lincoln. A number of the senators say that they or their staff dealt mostly with Grogan, not Keating, in the months surrounding the April 1987 meetings. The infamous <a href="/files/exhibits/Lincoln/%234 _Get Black_ Memo 07-15-87.jpeg">“Get Black” memo</a> penned by Keating was addressed to Grogan. During the Senate Ethics Committee hearings, Grogan requested and was granted a private session and was granted immunity for the release of that session’s transcript into evidence.</p>
 
