--- a/src/views/actors/aides/Laurie-Sedlmayr.hbs
+++ b/src/views/actors/aides/Laurie-Sedlmayr.hbs
@@ -10,7 +10,7 @@ name: actors
                 <li><a href="/files/evidence/39">Testimony - Laurie Sedlmayr, Senator DeConcini's Banking Aide, Part 1</a></li>
                 <li><a href="/files/evidence/40">Testimony - Laurie Sedlmayr, Senator DeConcini's Banking Aide, Part 2</a></li>
             </ul>
-        
+
         <h2>Video</h2>
     <ul>
                 <li><a href="/videos/Sedlmayr - Part I">Sedlmayr - Part I</a></li>
@@ -18,17 +18,17 @@ name: actors
             </ul>
     </div>
 
-
-<p>Senator DiConcini's Banking Aide.&nbsp;</p>
-<p>In January of 1978, Sedlmayr began working full-time for 
-DeConcini. Her first recollection of contact with Keating or ACC was in 
-1984. Both evidence and her testimony suggest that, as early as 
-December 1986, she warned DeConcini to “stay out of” the 
-Keating/Gray feud. Still, she remained a key go-between player for 
+<img src="/img/actors/Laurie-Sedlmayr.png" alt="Laurie Sedlmayr" class="float-left">
+<p><u>Senator DiConcini's Banking Aide</u></p>
+<p>In January of 1978, Sedlmayr began working full-time for
+DeConcini. Her first recollection of contact with Keating or ACC was in
+1984. Both evidence and her testimony suggest that, as early as
+December 1986, she warned DeConcini to “stay out of” the
+Keating/Gray feud. Still, she remained a key go-between player for
 Keating and DeConcini.</p>
-<p>On behalf of DeConcini and McCain, Sedlmayr prepared the 
-memo to Senator Riegle, which invited him to attend the second 
-meeting. McCain claimed that he and his staff had no knowledge of 
-this memo, and Sedlmayr admits that she forgot to bring the memo to 
+<p>On behalf of DeConcini and McCain, Sedlmayr prepared the
+memo to Senator Riegle, which invited him to attend the second
+meeting. McCain claimed that he and his staff had no knowledge of
+this memo, and Sedlmayr admits that she forgot to bring the memo to
 McCain’s office to be signed before sending it to Riegle.</p>
 <br clear="all">
