--- a/src/views/actors/supporting_cast/Danny-Wall.hbs
+++ b/src/views/actors/supporting_cast/Danny-Wall.hbs
@@ -7,7 +7,7 @@ name: actors
 
 <p>Wall was the FHLBB Chairman that succeeded Edwin Gray in mid-1987, after
 Gray had stepped down from his post. Some say Wall was more
-sympathetic to Keating. Wall dismissed efforts for Congressional action on the
+sympathetic to Keating. Wall <a href="/files/evidence/48">dismissed</a> efforts for Congressional action on the
 burgeoning scandal. At the time, the House Banking Committee
 Chairman asked President Bush to dismiss him. Under his
 Chairmanship, the Bank Board did not follow the San Francisco officials’
