--- a/src/views/evidence.hbs
+++ b/src/views/evidence.hbs
@@ -25,15 +25,15 @@ name: evidence
         <tr><td><a href="http://keatingfive.org/files/evidence/6">Gray Reimbursed Home Loan Banks for Wife's Travels</a></td><td>N/A</td><td class="nowrap">Dec. 3, 1986</td></tr>
         <tr><td><a href="http://keatingfive.org/files/evidence/3">Bank Board Clears Henkel of Conflict Charge</a></td><td>Reagan Nominee Accused of Proposing Self-Serving Amendment</td><td class="nowrap">Mar. 13, 1987</td></tr>
         <tr><td><a href="http://keatingfive.org/files/evidence/7">Henkel Resigns FHLBB Post, Criticizes Justice Dept. Probe</a></td><td>N/A</td><td class="nowrap">Apr. 2, 1987</td></tr>
-        <tr><td>Who to Thank for the Thrift Crisis</td><td>The industry owes its troubles to Congress, regulators - and itself.</td><td class="nowrap">Jun. 12, 1988</td></tr>
-        <tr><td>Key Senators Seek to Slow Growth of Troubled S&Ls</td><td>Proxmire, Garn Want Quick Action to Prevent More Losses</td><td class="nowrap">Aug. 3, 1988</td></tr>
+        <tr><td><a href="http://keatingfive.org/files/evidence/47">Who to Thank for the Thrift Crisis</a></td><td>The industry owes its troubles to Congress, regulators - and itself.</td><td class="nowrap">Jun. 12, 1988</td></tr>
+        <tr><td><a href="http://keatingfive.org/files/evidence/48">Key Senators Seek to Slow Growth of Troubled S&Ls</a></td><td>Proxmire, Garn Want Quick Action to Prevent More Losses</td><td class="nowrap">Aug. 3, 1988</td></tr>
         <tr><td><a href="http://keatingfive.org/files/evidence/9">Savings & Loans & Intrigue & 'Meddling'</a></td><td>N/A</td><td class="nowrap">Oct. 9, 1988</td></tr>
         <tr><td><a href="http://keatingfive.org/files/evidence/12">The Savings and Loan Crisis<br>[article in a series]</a></td><td>Edwin Gray on the S&L Crisis: 'This Was a Self-Inflicted Disaster'</td><td class="nowrap">Oct. 9, 1988</td></tr>
         <tr><td><a href="http://keatingfive.org/files/evidence/10">The $150 Billion Calamity<br>[article in a series]</a></td><td>Hardening the S&L Battle Lines: 'You Can't Restrict Our God-Given Right to Make Profits!'</td><td class="nowrap">Jun. 14, 1989</td></tr>
         <tr><td><a href="http://keatingfive.org/files/evidence/2">$1.1 Billion Ban Fraud Suit Filed</a></td><td>New Rescue Agency Accuses S&L Owner of Racketeering</td><td class="nowrap">Sept. 16, 1989</td></tr>
         <tr><td><a href="http://keatingfive.org/files/evidence/13">Auditors Of Lincoln On the Spot</a></td><td>Top Ernst Officials Will Testify Today</td><td class="nowrap">Nov. 14, 1989</td></tr>
-        <tr><td>Mr. Ed’s Revenge</td><td>Once the Washington Press Corps Mocked Ed Gray. But Then He Helped Topple the Speaker of the House and Put Alan Cranston on the Run.</td><td class="nowrap">Mar. 25, 1990</td></tr>
-        <tr><td>Former Sen. William Proxmire was never tempted by campaign...</td><td>Unknown<br>(Full Title Unavailable)</td><td class="nowrap">Dec. 9, 1990</td></tr>
+        <tr><td><a href="http://keatingfive.org/files/evidence/49">Mr. Ed’s Revenge</a></td><td>Once the Washington Press Corps Mocked Ed Gray. But Then He Helped Topple the Speaker of the House and Put Alan Cranston on the Run.</td><td class="nowrap">Mar. 25, 1990</td></tr>
+        <tr><td><a href="http://keatingfive.org/files/evidence/50">Former Sen. William Proxmire was never tempted by campaign...</a></td><td>Unknown<br>(Full Title Unavailable)</td><td class="nowrap">Dec. 9, 1990</td></tr>
       </table>
     </div>
   </div>
