--- a/src/views/actors/supporting_cast/Ed-Gray.hbs
+++ b/src/views/actors/supporting_cast/Ed-Gray.hbs
@@ -63,8 +63,8 @@ name: actors
 
 <p>After the scandal broke, divergent opinions emerged on Gray, who was active in the media and traded sharp letters back-and-forth with some of the senators. For Cranston, Gray was simply trying “to divert attention away from his own role in the savings and loan scandal. ‘Gray, with his lavish, <a href="/files/evidence/6">industry-paid expense account</a> and Hawaiian junkets, thought of the Federal Home Loan Bank Board as his Good Ship Lollipop,’ Cranston said… ‘When it turned into the Titanic, he began looking for scapegoats.’”</p>
 
-<p>However, <a href="/actors/supporting_cast/Bill-Seidman">Bill Seidman</a> and William Proxmire took to defending Gray. Proxmire told the press that “in hindsight… he was right on almost every count.” Seidman said that Gray “likes being a hero. Here is a guy that was being massacred, and now he relishes being on the offensive. He wants to set the record straight. It's very important to him.”<a href="#section1"><sup>1</sup></a></p>
+<p>However, <a href="/actors/supporting_cast/Bill-Seidman">Bill Seidman</a> and <a href="/actors/supporting_cast/William-Proxmire">William Proxmire</a> took to defending Gray. Proxmire told the press that “in hindsight… he was right on almost every count.” Seidman said that Gray “likes being a hero. Here is a guy that was being massacred, and now he relishes being on the offensive. He wants to set the record straight. It's very important to him.”<a href="#section1"><sup>1</sup></a></p>
 
-<p id="section1"><sup>1</sup>Cranston, Seidman, and Proxmire quotes are from this article.</p>
+<p id="section1"><sup>1</sup>Cranston, Seidman, and Proxmire quotes are from <a href="/files/evidence/49">this article</a>.</p>
 
 <br clear="all">
