2018 video and link updates
batch #4

--- a/src/views/actors/affiliates/Charles-Keating.hbs
+++ b/src/views/actors/affiliates/Charles-Keating.hbs
@@ -32,6 +32,6 @@ name: actors
 
 <p>Keating was convicted in both Federal and state courts of fraud, racketeering, and conspiracy. He served four-and-a-half years in prison before both convictions were overturned in 1996 because flawed of jury instructions that violated Keating’s due-process rights. In 1999, he <a href="/files/exhibits/Keating/Keating Pleads Guilty to Fraud_ Legal Saga Ends - Los Angeles Times.pdf">pled</a> guilty to a more limited set of wire and bankruptcy fraud counts, and was sentenced to the time he had already served. Keating has always maintained his innocence.</p>
 
-<p><p id="section1"><sup>1</sup></p>While the FHLBB had an oversight role over all of the nation’s S&Ls, most of their regulations applied only to Federally-chartered ones. Thrifts that were state-chartered (as Lincoln was in California) had to abide by the laws of their state.</p>
+<p id="section1"><sup>1</sup>While the FHLBB had an oversight role over all of the nation’s S&Ls, most of their regulations applied only to Federally-chartered ones. Thrifts that were state-chartered (as Lincoln was in California) had to abide by the laws of their state.</p>
 
 <br clear="all">
