--- a/src/views/actors/supporting_cast/Lee-H-Henkel-Jr.hbs
+++ b/src/views/actors/supporting_cast/Lee-H-Henkel-Jr.hbs
@@ -13,8 +13,8 @@ name: actors
 </div>
 
 <p><u>FHLBB Board Member</u></p>
-<p>
-The Reagan Administration appointed Henkel to the FHLBB in late
+
+<p>The Reagan Administration appointed Henkel to the FHLBB in late
 1986 after lobbying by Keating. Henkel was named through a recess
 appointment, meaning that he did not require Senate confirmation. He
 proposed new regulations in his first meeting on the FHLBB. Many saw
@@ -32,5 +32,5 @@ litigation.</p>
 
 <hr />
 
-<p id="section1"><sup>1</sup><http://web.mit.edu/~mkgray/afs/bar/afs/net/user/tytso/usenet/americast/wpost/1435</p>
+<p id="section1"><sup>1</sup>http://web.mit.edu/~mkgray/afs/bar/afs/net/user/tytso/usenet/americast/wpost/1435</p>
 <br clear="all">
