--- a/src/views/actors/supporting_cast/SF-Regulators.hbs
+++ b/src/views/actors/supporting_cast/SF-Regulators.hbs
@@ -28,9 +28,9 @@ which it had made loans.</p><p>
 
 Black’s boss, FHLBB Chairman Ed Gray, asked Black to report back to
 him about the April 9th meeting. Black took the extensive notes that
-formed the basis for the infamous <a href="
+formed the basis for the infamous "<a href="
 http://keatingfive.org/files/exhibits/Gray/Black%20Transcript%2004-10-87.pdf">
-“Black Transcript</a>.” While many questioned exactly how Mr. Black was able to
+Black Transcript</a>." While many questioned exactly how Mr. Black was able to
 take such detailed notes, the substance of these notes was not significantly
 challenged by any of the witnesses to the Senate Ethics Committee.</p>
 
